fixed the styling of the plugin-metadata stat-items so they wrap to newlines when necessary

--- a/mod-picker/app/assets/stylesheets/general/global.scss
+++ b/mod-picker/app/assets/stylesheets/general/global.scss
@@ -695,3 +695,17 @@ a .help-tooltip {
 .small-spinner {
   height: 60px;
 }
+
+/* css for plugin-metadata  */
+
+plugin-metadata {
+  .stat-data {
+    width: calc(100% - 170px);
+    white-space: normal;
+  }
+
+  .plugin-description {
+    white-space: pre-line;
+    word-wrap: break-word;
+  }
+}
