--- a/mod-picker/app/assets/stylesheets/pages/submitMod.scss
+++ b/mod-picker/app/assets/stylesheets/pages/submitMod.scss
@@ -57,13 +57,16 @@ form {
 
   .analysis-container {
     max-height: 400px;
-    max-width: 700px;
+    max-width: 750px;
     overflow-y: auto;
+
     .plugin-analysis-item {
       margin-bottom: 8px;
+
       .stat-item {
         padding-left: 30px;
         margin-bottom: 4px;
+        max-width: 730px;
       }
     }
   }
